# jazyk

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
jazyk/: Makefile  langs.py  main.py
