[tool.poetry]
name = "jazyk"
version = "0.3.2"
description = ""
authors = ["walid <walid.sa3d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
deep-translator = "^1.11.4"
rich = "^13.7.1"
uroman = "^1.3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jazyk = "jazyk.main:translate_text"